force-app/main/default/objects/Exception_Log__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Apex class , name of Flow/Process Builder/Workflow Rule, or lightning component/LWC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>