force-app/main/default/objects/Exception_Log__c/fields/Element_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Name__c</fullName>
    <description>Used in Flow/PB/Workflow rule</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Element Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>