force-app/main/default/objects/Exception_Log__c/fields/Escalate__c.field-meta.xml
<CustomField>
    <fullName>Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initiates escalation processes to send an email to an administrator (see record triggered flow named Exception Log Escalation)</description>
    <label>Escalate</label>
    <type>Checkbox</type>
</CustomField>