force-app/main/default/objects/Exception_Log__c/fields/Exception_Code__c.field-meta.xml
<CustomField>
    <fullName>Exception_Code__c</fullName>
    <description>Used to store any published error codes (potentially from external systems)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>