force-app/main/default/objects/Exception_Log__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Module or piece of application functionality the component is related to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Feature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>