force-app/main/default/objects/Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Exception or error message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>