force-app/main/default/objects/Exception_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Apex Method</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>